<resources>
    <string name="app_name">RSS Reader</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="shop">Shop</string>
    <string name="launch_in_web_browser">Launch in WebBrowser</string>
    <string name="settings">Settings</string>
    <string name="source_problem">Source problem</string>
    <string name="connection_problem">Connection problem</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type title</string>
    <string name="new_">new</string>
    <string name="reading">reading</string>
    <string name="mark_done">Mark as done</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="feeds">Feeds</string>
    <string name="theme_key">themeKey</string>
    <string name="dark_theme_summary">Comfortable at night</string>
    <string name="dark_theme">Dark theme</string>
    <string name="theme_settings">Theme settings</string>
    <string name="file_name">feed.txt</string>
    <string name="separator"> ## </string>
    <string name="default_feed">TUT.BY - Главные новости недели ## https://news.tut.by/rss/index.rss</string>
    <string name="fragment_feed">Feeds</string>
    <string name="fragment_new_feed">Add feeds</string>
    <string name="storage_settings">Storage settings</string>
    <string name="storage_time">Storage time of items</string>
    <string name="storage_time_key">storageTimeKey</string>
    <string name="storage_time_summary">Items are stored on the device for such a time</string>
    <string name="file_not_read">File not read</string>
    <string name="feed_unavailable">Feed not loaded</string>
    <string name="no_new_items">No new items</string>
</resources>