<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_settings">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/theme_key"
            app:summary="@string/dark_theme_summary"
            app:title="@string/dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage_settings">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/storage_time"
            app:entryValues="@array/storage_time_values"
            app:key="@string/storage_time_key"
            app:summary="@string/storage_time_summary"
            app:title="@string/storage_time" />

    </PreferenceCategory>

</PreferenceScreen>